css/style.css
@charset "UTF-8";

#bggFloatBody {
    font-family: sans-serif;
    font-size: 18px;
}

#bggFloatBody {
    /* width:300px; */
    padding: 5px;
    margin: 5px;
    /* height:100%; */
    font-family: Verdana,Arial,sans-serif;
    font-size: 15px;
    line-height: 1.5px;
}

.bgg-hover-p {
    margin: 0.1em 0.2em 0.1em;
}

.bgg-float-flex-container {
    display: flex;
}

.bgg-float-flex-child {
    flex: 3;
}  

.bgg-float-flex-child:first-child {
    border-right: 2px solid black;
    padding: .2em;
    flex: 1;
    display: inline-grid;
    align-content: center;
} 

.bgg-float-thumbnail {
    max-width: 200px;
    object-fit: contain;
}

.bgg-hover-rating-block {
    width: 40px;
    height: 20px;
    position: relative;
    background-color: transparent;
    margin-top: 13px;
    margin-bottom: 13px;
    /* margin-bottom: 13px;
    margin-left: 7px; */
    line-height: 20px;
    display: block;
    text-align: center;
    color: white;
    font-size: 18px;
    font-weight: 700;
}

.bgg-hover-rating-wrapper {
    float: left;
}

.bgg-hover-rating-wrapper::after, .bgg-hover-game-wrapper::before {
    width: 0;
    height: 0;
    position: absolute;
    display: inline-block;
    left: 0;
    border-left: 23px solid rgb(214, 214, 214);
    border-right: 23px solid rgb(214, 214, 214);
}

.bgg-hover-rating-block::before, .bgg-hover-rating-block::after {
    content: "";
    width: 0;
    height: 0;
    position: absolute;
    -webkit-transform: scale(.999);
    left: 0;
    border-left: 20px solid rgb(214, 214, 214);
    border-right: 20px solid rgb(214, 214, 214);
}

.bgg-hover-rating-block::before {
    border-bottom: 13px solid white;
    top: -13px;
}

.bgg-hover-rating-block::after {
    bottom: -13px;
    border-top: 13px solid white;
}

.bgg-hover-has-rating-3, .bgg-hover-has-rating-3:before, .bgg-hover-has-rating-3:after {
    background-color: #b2151f !important;
    border-top-color: #b2151f !important;
    border-bottom-color: #b2151f !important;
}

.bgg-hover-has-rating-5, .bgg-hover-has-rating-5:before, .bgg-hover-has-rating-5:after {
    background-color: #d71925 !important;
    border-top-color: #d71925 !important;
    border-bottom-color: #d71925 !important;
}

.bgg-hover-has-rating-7, .bgg-hover-has-rating-7:before, .bgg-hover-has-rating-7:after {
    background-color: #5369a2 !important;
    border-top-color: #5369a2 !important;
    border-bottom-color: #5369a2 !important;
}

.bgg-hover-has-rating-8, .bgg-hover-has-rating-8:before, .bgg-hover-has-rating-8:after {
    background-color: #1978b3 !important;
    border-top-color: #1978b3 !important;
    border-bottom-color: #1978b3 !important;
}

.bgg-hover-has-rating-9, .bgg-hover-has-rating-9:before, .bgg-hover-has-rating-9:after {
    background-color: #1d804c !important;
    border-top-color: #1d804c !important;
    border-bottom-color: #1d804c !important;
}

.bgg-hover-has-rating-10, .bgg-hover-has-rating-10:before, .bgg-hover-has-rating-10:after {
    background-color: #186b40 !important;
    border-top-color: #186b40 !important;
    border-bottom-color: #186b40 !important;
}

div#bgg-hover-title-wrapper {
    display: flex;
}

div#bgg-float-rating-title-div {
    display: flex;
    padding: .4em;
}

.title {
    text-decoration: underline;
    font-weight: bold;
    display: inline-block;
    margin-left: .6em;
}

.bgg-hover-players-time-weight-flex-container {
    font-weight: bold;
    display: flex;
    border-top: 1px solid gray;
    border-bottom: 1px solid gray;
}

.bgg-hover-players-time-weight-flex-child {
    /* flex: 1; */
    border-left: 1px solid gray;
    padding: .4em;
}

.bgg-hover-players-time-weight-flex-child:first-child {
    /* flex: 1.7; */
    border-left: none;
}

.bgg-hover-link {
    text-decoration: underline;
    color: rgba(0, 0, 0, 0.9);
}

